--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="React calculator"
+      content="React calculator- Lucifer Utkarsh"
     />
-    <title>React App</title>
+    <title>React App- Lucifer Utkarsh</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Make sure JS is enabled to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
